--- a/src/index.html
+++ b/src/index.html
@@ -214,7 +214,7 @@
             <div class="content-wrap">
                 <h2 id="contact" class="content-title">Wie ben ik</h2>
                 <div class="content-text">
-                    <img class="face" src="img/photo.png"/>
+                    <img class="face" src="img/photo.jpeg"/>
 
                     <p>
                     Ik ben Mr. Miriam Jansen. <br/>
@@ -266,27 +266,5 @@
                 </div>
             </div>
         </footer>
-
-        <!-- <script> -->
-        <!--     window.onscroll = function() { NotoggleNavBar(); }; -->
-        <!--     /* https://developer.mozilla.org/en-US/docs/Web/API/Element/matches */ -->
-        <!--     if (!Element.prototype.matches) { -->
-        <!--         Element.prototype.matches= Element.prototype.msMatchesSelector; -->
-        <!--     } -->
-
-        <!--     function toggleNavBar() { -->
-        <!--         var navbar = document.querySelector('.nav-steps'); -->
-        <!--         navbar.style.opacity = 1; -->
-        <!--         // console.log(document.body.scrollTop, document.documentElement.scrollTop); -->
-        <!--         if (!navbar.matches(':hover')) { -->
-        <!--             setTimeout(function() { -->
-        <!--                 if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) { -->
-        <!--                     navbar.style.opacity = 0; -->
-        <!--                 } -->
-        <!--             }, 3000); -->
-        <!--         } -->
-        <!--     }; -->
-
-        <!-- </script> -->
     </body>
 </html>
