--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,9 @@
 
                     <p>
                     Tot mijn cliënten behoren onder andere ondernemers, kleine
-                    en middelgrote vennootschappen, particulieren, accountants-
-                    en administratiekantoren, die mij in schakelen vanwege mijn
-                    specialistische fiscale kennis.</p>
+                    en middelgrote vennootschappen, particulieren en
+                    accountants- en administratiekantoren, die mij in schakelen
+                    vanwege mijn specialistische fiscale kennis.</p>
 
                     <p>
                     Indien u naast fiscale en juridische dienstverlening nog
