added mediation activities

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
                         <div class="card-content">
                             <h3>Juridisch</h3>
                             <ul>
-                                Opstellen/beoordelen van o.a.:
+                                Opstellen/beoordelen van:
                                 <br><br>
                                 <li>Notariële akten</li>
                                 <li>Leningsovereenkomsten</li>
@@ -181,8 +181,14 @@
                                 <li>Arbeidsovereenkomsten</li>
                                 <li>Huurovereenkomsten</li>
                                 <li>Aandeelhoudersovereenkomsten</li>
-                                <br>en<br><br>
-                                <li>Mediation bij echtscheiding</li>
+                            </ul>
+                            <h3>Mediation bij geschillen</h3>
+                            <ul>
+                                Zoals bij:<br><br>
+                                <li>Familiezaken (echtscheiding)</li>
+                                <li>Arbeidsgeschillen</li>
+                                <li>Zakelijke geschillen binnen een bedrijf of
+                                    organisatie</li>
                             </ul>
                         </div>
                     </div>
